Fixed bug
Last change to font size caused 100% width tables to display a horizontal scroll bar. Not sure why... but this is a quick fix.

--- a/main.css
+++ b/main.css
@@ -285,7 +285,7 @@ tbody tr:nth-child(even) {
 }
 
 table {
-	width: 100%
+	width: 99%
 }
 
 
